// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarLink renders sidebar link 1`] = `
<a
  class="menu-item text-h7 xl:text-menu mb-6 xl:mb-3"
  style="width: 12.5rem;"
/>
`;

exports[`SidebarLink renders sidebar link with badge 1`] = `
<a
  class="menu-item text-h7 xl:text-menu mb-6 xl:mb-3"
  style="width: 12.5rem;"
>
   
  <badge-stub
    value="10"
  />
</a>
`;
